data/derived/sp14/progs/unify/prog0007.ml.out
Characters 54-56:
  | _     -> n mod 10 digitsOfInt  n/10;;
                   ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
